more examples with C++ and C

--- a/CPPConsoleApplication/CPPConsoleApplication.vcxproj.filters
+++ b/CPPConsoleApplication/CPPConsoleApplication.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClCompile Include="CPPConsoleApplication.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="MyClass.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="MyClass.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
